event.css
/*  event calendar table styles  */
.event-calendar table {
  border: 1px solid #242;
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
  margin-bottom: 1em;
}
.event-calendar tr {
  padding: 0;
  margin: 0;
  background: white;
}
.event-calendar th {
  color: #000;
  background: #aac;
  text-align: center;
  padding: 1px 0.33em;
  border: 1px solid #242;
}
.event-calendar td {
  border: 1px solid #bbb;
  color: #777;
  text-align: right;
  vertical-align: top;
  margin: 0;
  padding: 0;
}

.event-calendar th.heading {
  border-width: 1px 0px;
}
.event-calendar th.prev {
  text-align: left;
  border-width: 1px 0px 1px 1px;
}
.event-calendar th.next {
  text-align: right;
  border-width: 1px 1px 1px 0px;
}
.event-calendar th a {
  font-weight: bold;
  color: #363636;
}
.event-calendar td a {
  color: #222244;
  font-weight: bold;
  text-decoration: none;
}
.event-calendar td a:hover {
  text-decoration: underline;
}
.event-calendar td.sat, .event-calendar td.sun {
  background: #fdd;
}
.event-calendar td.selected {
  background: #99f;
}
.event-calendar td.today {
  background: #f99;
}
.event-calendar td.year, .event-calendar td.month {
  text-align: center;
  border-width: 1px 0px;
}

/*  days of the week header cells */
.event-calendar td.days {
  color: #cce;
  background: #224;
  text-align: center;
  border: 1px solid #242;
  border-width: 0 1px 1px 0;
}

/*  floating day number div  */
.event-calendar div.day {
  float: right;
  text-align: center;
  border: 1px solid gray;
  border-width: 0 0 1px 1px;
  padding: 0.125em 0.25em 0 0.25em;
  margin: 0;
  background: #f3f3f3;
}

/*  event node times for the body */
.event-nodeapi div {
  color: #000;
  padding: 0.5em 1em 0 0;
}
.event-nodeapi div label { color: #999; }

/*  individual node container  */
.event-calendar div.event {
  font-style: italic;
  background-color: #fff;
  border: solid 1px #555;
  text-align: left;
  margin: 0.25em 0 0.5em 0.25em;
}
.event-calendar div.title {
  padding-left: 3px;
}
.event-calendar div.title a {
  color: #000;
}
.event-calendar div.title a:hover {
  color: #c00;
}
.event-calendar .content {
  margin: 5px;
  padding: 3px;
  border-left: solid 2px #ddd;
  padding-left: 5px;
}
.event-calendar div.type {
  margin-left: 5px;
  font-size: 0.8em;
}
.event-calendar div.type a {
  color: #00c;
}
.event-calendar div.type a:hover {
  color: #c00;
}
.event-calendar div.links {
  padding-left: 3px;
}
.event-calendar div.links a {
  color: #00c;
}
.event-calendar div.links a:hover {
  color: #c00;
}
.event-calendar .start {
  font-style: normal;
  color: #555;
  margin: 2px 0 2px 0;
  padding-left: 3px;
}
.event-calendar .end {
  font-style: normal;
  color: #555;
  margin: 2px 0 2px 0;
  padding-left: 9px;
  font-size: 0.8em;
}
.event-calendar .ongoing {
  font-style: normal;
  color: #555;
  margin: 2px 0 2px 0;
  padding-left: 9px;
  font-size: 0.8em;
}
.event-calendar div.info {
  visibility: hidden;
  height: 0px;
  overflow:hidden;
  padding-left: 3px;
}


/*  individual node view styles  */
.event-calendar div.monthview .title {
  font-size: 0.8em;
}
.event-calendar div.dayview {
  width: auto;
}
.event-calendar div.tableview {
  width: auto;
}
.event-calendar div.tableview .links {
}

.event-calendar .event-empty {
  min-height: 6em;
}
.container-inline .day input {
  width: auto;
  display: inline;
}

/*  multi-day event top stripes  */
.event-calendar .event .stripe {
  height: 5px;
}
.event-calendar .event .stripe-1 {
  background-color: #FF6;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-2 {
  background-color: #F66;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-3 {
  background-color: #668CFF;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-4 {
  background-color: #FFB366;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-5 {
  background-color: #85FF66;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-6 {
  background-color: #A666FF;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-7 {
  background-color: #FFE066;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-8 {
  background-color: #66FFFF;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-9 {
  background-color: #FF66D9;
  height: 5px;
  width: 100%;
}
.event-calendar .event .stripe-10 {
  background-color: #DDD;
  height: 5px;
  width: 100%;
}

#block-event-1 .item-list ul li a { 
  margin-top: 8px; 
}

span.event-timeleft {
  padding-bottom: 3px;
  text-align: right;
  width: auto;
  display: block;
}
span.event-nodetype {
  padding: 0px 0px 0px 5px;
  display: block;
  width: auto;
  text-align: right;
  float: right;
}
.ical-link {
  text-align: right;
}

